--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.1",
+    "@prisma/client": "^6.14.0",
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-checkbox": "^1.3.2",
@@ -30,10 +31,12 @@
     "lucide-react": "^0.539.0",
     "next": "15.4.4",
     "next-themes": "^0.4.6",
+    "prisma": "^6.14.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.62.0",
     "sonner": "^2.0.7",
+    "sqlite3": "^5.1.7",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.0.17"
   },
