--- a/env.example
+++ b/env.example
@@ -1,6 +1,9 @@
 # Environment Configuration for SmartPrint System
 # Copy this file to .env.local and modify as needed
 
+# Database Configuration
+DATABASE_URL="postgresql://username:password@host:port/database?schema=public"
+
 # Twilio Configuration
 NEXT_PUBLIC_TWILIO_ACCOUNT_SID=your_account_sid_here
 NEXT_PUBLIC_TWILIO_AUTH_TOKEN=your_auth_token_here
