--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "npm install && npx prisma generate && next build",
+    "build": "prisma generate && next build",
     "start": "next start",
     "lint": "next lint",
     "postinstall": "prisma generate"
@@ -51,17 +51,14 @@
     "zod": "^4.0.17"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "autoprefixer": "^10.0.1",
-    "eslint": "^9",
+    "eslint": "^8",
     "eslint-config-next": "15.4.4",
     "postcss": "^8",
-    "tailwindcss": "^4",
-    "tw-animate-css": "^1.3.6",
+    "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
 }
