--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "prisma generate --schema=./prisma/schema.dev.prisma && next dev",
     "build": "prisma generate && next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "prisma generate"
+    "postinstall": "prisma generate",
+    "db:dev": "prisma generate --schema=./prisma/schema.dev.prisma",
+    "db:prod": "prisma generate"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.1",
