🚀 PRODUCTION READY: Fixed Dashboard Actions & Sales Person Management - Fixed PDF download button functionality - Fixed Apply Update button in edit quote modal - Fixed Add/Update sales person functionality - Added PDF generation API endpoint - Updated database configuration for production - All critical functionality now working

--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "private": true,
   "scripts": {
     "dev": "prisma generate --schema=./prisma/schema.dev.prisma && next dev",
-    "build": "prisma generate && next build",
+    "build": "prisma generate --schema=./prisma/schema-postgresql-current.prisma --no-engine && next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "prisma generate",
+    "postinstall": "prisma generate --schema=./prisma/schema-postgresql-current.prisma --no-engine",
     "db:dev": "prisma generate --schema=./prisma/schema.dev.prisma",
-    "db:prod": "prisma generate"
+    "db:prod": "prisma generate --schema=./prisma/schema-postgresql-current.prisma --no-engine"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.1",
