--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "prisma generate --schema=./prisma/schema.dev.prisma && next dev",
+    "dev": "DATABASE_URL=\"postgres://c91c8561fe8b6b34a5985f17ac564ca367969fe928557c4c4f6b5bc780733281:sk_1sGdxWA91n5mc5fS6JTs0@db.prisma.io:5432/?sslmode=require\" prisma generate --schema=./prisma/schema.prisma && DATABASE_URL=\"postgres://c91c8561fe8b6b34a5985f17ac564ca367969fe928557c4c4f6b5bc780733281:sk_1sGdxWA91n5mc5fS6JTs0@db.prisma.io:5432/?sslmode=require\" next dev",
     "build": "prisma generate --schema=./prisma/schema-postgresql-current.prisma --no-engine && next build",
     "start": "next start",
     "lint": "next lint",
