--- a/package.json
+++ b/package.json
@@ -3,17 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "DATABASE_URL=\"postgres://c91c8561fe8b6b34a5985f17ac564ca367969fe928557c4c4f6b5bc780733281:sk_1sGdxWA91n5mc5fS6JTs0@db.prisma.io:5432/?sslmode=require\" prisma generate --schema=./prisma/schema.prisma && DATABASE_URL=\"postgres://c91c8561fe8b6b34a5985f17ac564ca367969fe928557c4c4f6b5bc780733281:sk_1sGdxWA91n5mc5fS6JTs0@db.prisma.io:5432/?sslmode=require\" next dev",
-    "build": "prisma generate --schema=./prisma/schema.prisma --no-engine && next build",
+    "dev": "prisma generate --schema=./prisma/schema.prisma && next dev",
+    "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "postinstall": "prisma generate --schema=./prisma/schema.prisma --no-engine",
-    "db:dev": "prisma generate --schema=./prisma/schema.dev.prisma",
-    "db:prod": "prisma generate --schema=./prisma/schema.prisma --no-engine"
+    "prisma:generate": "prisma generate --schema=./prisma/schema.prisma",
+    "prisma:migrate": "prisma migrate dev"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.1",
-    "@prisma/client": "^6.15.0",
+    "@prisma/client": "^6.16.2",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-avatar": "^1.1.10",
@@ -22,10 +20,10 @@
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-hover-card": "^1.0.7",
     "@radix-ui/react-label": "^2.1.7",
-    "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-progress": "^1.0.3",
     "@radix-ui/react-radio-group": "^1.3.7",
-    "@radix-ui/react-scroll-area": "^1.0.5",
+    "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
@@ -44,8 +42,8 @@
     "next": "15.4.4",
     "next-themes": "^0.4.6",
     "pg": "^8.16.3",
-    "prisma": "^6.14.0",
     "react": "19.1.0",
+    "react-day-picker": "^9.11.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.62.0",
     "sonner": "^2.0.7",
@@ -62,6 +60,7 @@
     "eslint": "^8",
     "eslint-config-next": "15.4.4",
     "postcss": "^8.5.6",
+    "prisma": "^6.16.2",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
   }
